tests/js_error/regexp/source_location_unicode.exp
SyntaxError: Invalid quantifier bounds in regular expression
  ┌ tests/js_error/regexp/source_location_unicode.js:2:6
  |
2 | /😂{2,1}/u;
  |      ^